// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportPreviews command cli --minify runs on templates 1`] = `
"mailing Exporting minified preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing ✅ Processed 1 previews

"
`;

exports[`exportPreviews command cli halts on lint errors runs on templates 1`] = `
"mailing Exporting preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing ✅ Processed 1 previews

"
`;

exports[`exportPreviews command cli runs on templates 1`] = `
"mailing Exporting preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing ✅ Processed 1 previews

"
`;
